--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 <body>
 
     <!-- Barra de navegación -->
-    <nav class="container-fluid">
-        <div class="row">
-            <a class="col-md-2" href="#">Mi Sitio Web</a>
-            <button class="col-md-2" type="button">Menú</button>
-            <div class="col-md-8">
-                <ul class="container">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="col-md-2 navbar-brand mx-2" href="#"><img src="https://img.freepik.com/fotos-premium/logotipo-colorido-circulo-azul-rosa-linea-azul-centro_15008-6520.jpg?w=740" alt="" width="50" height="50" class="d-inline-block align-text-top"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="col-md-10 collapse navbar-collapse" id="navbarNav" >
+                <ul class="container navbar-nav">
                     <div class="row">
-                        <li class="col-md-3"><a href="#">Inicio</a></li>
-                        <li class="col-md-3"><a href="#">Acerca de</a></li>
-                        <li class="col-md-3"><a href="#">Servicios</a></li>
-                        <li class="col-md-3"><a href="#">Contacto</a></li>
+                        <li class="col-md-3 px-3 nav-item"><a class="nav-link" href="#">Inicio</a></li>
+                        <li class="col-md-3 px-3 nav-item"><a class="nav-link" href="#">Acerca de</a></li>
+                        <li class="col-md-3 px-3 nav-item"><a class="nav-link" href="#">Servicios</a></li>
+                        <li class="col-md-3 px-3 nav-item"><a class="nav-link" href="#">Contacto</a></li>
                     </div>
                 </ul>
             </div>
@@ -54,7 +56,7 @@
     </section>
 
     <!-- Tabla -->
-    <section class="container">
+    <section class="container my-4">
         <h2>Tabla de Ejemplo</h2>
         <table class="table table-dark table-striped table-hover">
             <thead>
@@ -89,22 +91,22 @@
     </section>
 
     <!-- Formulario -->
-    <section class="container">
+    <section class="container py-4">
         <h2>Formulario de Contacto</h2>
         <form>
-            <div>
-                <label for="nombre">Nombre Completo</label>
-                <input type="text" id="nombre" placeholder="Escribe tu nombre">
+            <div class="mb-4">
+                <label class="form-label" for="nombre">Nombre Completo</label>
+                <input class="form-control" type="text" id="nombre" placeholder="Escribe tu nombre">
             </div>
-            <div>
-                <label for="email">Correo Electrónico</label>
-                <input type="email" id="email" placeholder="nombre@ejemplo.com">
+            <div class="mb-4">
+                <label class="form-label" for="email">Correo Electrónico</label>
+                <input class="form-control" type="email" id="email" placeholder="nombre@ejemplo.com">
             </div>
-            <div>
-                <label for="mensaje">Mensaje</label>
-                <textarea id="mensaje" rows="4" placeholder="Escribe tu mensaje"></textarea>
+            <div class="mb-4">
+                <label class="form-label" for="mensaje">Mensaje</label>
+                <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribe tu mensaje"></textarea>
             </div>
-            <button type="submit">Enviar</button>
+            <button type="submit" class="btn btn-primary mb-4">Enviar</button>
         </form>
     </section>
 
@@ -112,6 +114,6 @@
     <footer class="container">
         <p>&copy; 2024 Mi Sitio Web. Todos los derechos reservados.</p>
     </footer>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
